# exact

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
build-template/: Cargo.toml.in  build.rs
crates/exact-api/: Cargo.toml
crates/exact-api/migrations/: 0001_init.sql
crates/exact-api/src/: admin.rs  auth.rs  build.rs  config.rs  db.rs  dispatcher.rs  events.rs  hub.rs  leaderboards.rs  main.rs  problems.rs  runner_ws.rs  submissions.rs
crates/exact-proto/: Cargo.toml
crates/exact-proto/src/: lib.rs
crates/exact-runner/: Cargo.toml
crates/exact-runner/src/: main.rs  qemu.rs  synthetic.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  bytes.ts  editor.ts  markdown.ts  session.svelte.ts
frontend/src/lib/components/: CaseResultsPanel.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/admin/devices/: +page.svelte
frontend/src/routes/admin/p/[id]/: +page.svelte
frontend/src/routes/p/[id]/: +page.svelte
frontend/src/routes/s/[id]/: +page.svelte
scripts/: build-runner-aarch64.sh  exact-runner.service.in  runner-install.sh
