[workspace]
members = ["crates/exact-proto", "crates/exact-api", "crates/exact-runner"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Step 3: DB + auth.
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
tempfile = "3"
argon2 = "0.5"
dashmap = "6"
siphasher = "1"
sha2 = "0.10"
futures-util = "0.3"

# Path deps into the mono-os checkout sitting next to this repo.
# Will switch to git deps when the Railway Dockerfile lands.
monolink = { path = "../mono-os/tools/monolink", default-features = false }
monolink-proto = { path = "../mono-os/monolink-proto" }

# Internal crates
exact-proto = { path = "crates/exact-proto" }
