[package]
name = "exact-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "HTTP API for exact: submissions, problems, runner WebSocket hub."

[dependencies]
anyhow.workspace = true
exact-proto.workspace = true
monolink.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }

# DB + auth (step 3)
sqlx.workspace = true
chrono.workspace = true
oauth2.workspace = true
reqwest.workspace = true
url.workspace = true
time = "0.3"
dotenvy = "0.15"
base64 = "0.22"
getrandom = "0.3"
tempfile.workspace = true
