[package]
name = "exact-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Pi-side runner agent: drives a Cortex-M device on behalf of exact-api."

[dependencies]
anyhow.workspace = true
exact-proto.workspace = true
# The runner needs FileTransport for QEMU PTY dev mode + Loader/proto types.
monolink = { workspace = true, features = ["posix-transport"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

clap = { version = "4", features = ["derive", "env"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util.workspace = true
siphasher.workspace = true
sha2.workspace = true
http = "1"
